--- a/css/rcss_base.css
+++ b/css/rcss_base.css
@@ -351,6 +351,8 @@ body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_mod
 /* MODALS ERROR */
 /* MODALS CONTACTO */
 /* MODALS CONTACTO */
+/* MODALS PAGINA INICIO */
+/* MODALS PAGINA INICIO */
 .prin_alpha_1 {
   background: linear-gradient(90deg, white 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
 }
