--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -165,5 +165,7 @@ body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_mod
 /* MODALS ERROR */
 /* MODALS CONTACTO */
 /* MODALS CONTACTO */
+/* MODALS PAGINA INICIO */
+/* MODALS PAGINA INICIO */
 
 /*# sourceMappingURL=rcss_colores_01.css.map */
