--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -87,5 +87,7 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
 /* MODALS ERROR */
 /* MODALS CONTACTO */
 /* MODALS CONTACTO */
+/* MODALS PAGINA INICIO */
+/* MODALS PAGINA INICIO */
 
 /*# sourceMappingURL=rcss_fontsize_01.css.map */
