--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -681,5 +681,7 @@ body .contenedor .modals .cont_modals .modal_error_locales .cont_modal .cont_inf
 /* MODALS ERROR */
 /* MODALS CONTACTO */
 /* MODALS CONTACTO */
+/* MODALS PAGINA INICIO */
+/* MODALS PAGINA INICIO */
 
 /*# sourceMappingURL=rcss_tipo_01.css.map */
