--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1156,3 +1156,24 @@ body {
     }
 }
 /* MODALS CONTACTO */
+
+
+
+/* MODALS PAGINA INICIO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_pagina_inicio {
+                    .cont_modal {
+                        .close{}
+                        .cont_info_inicio {
+                            
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PAGINA INICIO */
