--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1165,6 +1165,7 @@ body {
         .modals{
             .cont_modals {
                 .modal_pagina_inicio {
+                    padding: 20px;
                     .cont_modal {
                         .close{}
                         .cont_info_inicio {
