--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -682,6 +682,9 @@ body .contenedor .modals .cont_modals .modal_error_locales .cont_modal .cont_inf
 /* MODALS CONTACTO */
 /* MODALS CONTACTO */
 /* MODALS PAGINA INICIO */
+body .contenedor .modals .cont_modals .modal_pagina_inicio {
+  padding: 20px;
+}
 /* MODALS PAGINA INICIO */
 
 /*# sourceMappingURL=rcss_tipo_01.css.map */
