--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -685,6 +685,18 @@ body .contenedor .modals .cont_modals .modal_error_locales .cont_modal .cont_inf
 body .contenedor .modals .cont_modals .modal_pagina_inicio {
   padding: 20px;
 }
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_titulo {
+  padding: 10px 10px 0px 10px;
+}
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_subtitulo {
+  padding: 10px 10px 0px 10px;
+}
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_texto {
+  padding: 10px 10px 0px 10px;
+  max-height: 200px;
+  overflow-y: scroll;
+}
+
 /* MODALS PAGINA INICIO */
 
 /*# sourceMappingURL=rcss_tipo_01.css.map */
