--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -1071,7 +1071,9 @@ body {
                     .cont_modal {
                         .close{}
                         .cont_info_inicio {
-                            
+                            .inicio_titulo{}
+                            .inicio_subtitulo{}
+                            .inicio_texto{}
                         }
                     }
                 }
