--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -969,7 +969,9 @@ body {
                     .cont_modal {
                         .close{}
                         .cont_info_inicio {
-                            
+                            .inicio_titulo{}
+                            .inicio_subtitulo{}
+                            .inicio_texto{}
                         }
                     }
                 }
