--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -884,7 +884,9 @@ body {
                     .cont_modal {
                         .close{}
                         .cont_info_inicio {
-                            
+                            .inicio_titulo{}
+                            .inicio_subtitulo{}
+                            .inicio_texto{}
                         }
                     }
                 }
