--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1165,18 +1165,18 @@ body {
         .modals{
             .cont_modals {
                 .modal_pagina_inicio {
-                    padding: 20px;
+                    padding: 10px 20px;
                     .cont_modal {
                         .close{}
                         .cont_info_inicio {
                             .inicio_titulo {
-                                margin: 10px 10px 0px 10px;
+                                //margin: 10px 10px 0px 10px;
                             }
                             .inicio_subtitulo {
-                                margin: 5px 10px 0px 10px;
+                                //margin: 5px 10px 0px 10px;
                             }
                             .inicio_texto {
-                                margin: 5px 10px 0px 10px;
+                                //margin: 5px 10px 0px 10px;
                                 max-height: 200px;
                                 overflow-y: scroll;
                             }
