--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -683,7 +683,11 @@ body .contenedor .modals .cont_modals .modal_error_locales .cont_modal .cont_inf
 /* MODALS CONTACTO */
 /* MODALS PAGINA INICIO */
 body .contenedor .modals .cont_modals .modal_pagina_inicio {
-  padding: 10px 20px;
+  padding: 10px;
+}
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .close {
+  top: 0px;
+  right: 0px;
 }
 body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_texto {
   max-height: 200px;
