--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -971,7 +971,9 @@ body {
                         .cont_info_inicio {
                             .inicio_titulo{}
                             .inicio_subtitulo{}
-                            .inicio_texto{}
+                            .inicio_div_texto {
+                                .inicio_texto{}
+                            }
                         }
                     }
                 }
