--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -689,11 +689,17 @@ body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .close {
   top: 0px;
   right: 0px;
 }
-body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_texto {
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_titulo {
+  padding-top: 5px 10px 0px 10px;
+}
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_subtitulo {
+  padding-top: 5px 10px 0px 10px;
+}
+body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_div_texto {
+  padding: 10px;
   max-height: 200px;
   overflow-y: scroll;
 }
-
 /* MODALS PAGINA INICIO */
 
 /*# sourceMappingURL=rcss_tipo_01.css.map */
