--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -1073,7 +1073,9 @@ body {
                         .cont_info_inicio {
                             .inicio_titulo{}
                             .inicio_subtitulo{}
-                            .inicio_texto{}
+                            .inicio_div_texto {
+                                .inicio_texto{}
+                            }
                         }
                     }
                 }
