--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1170,10 +1170,10 @@ body {
                         .close{ top: 0px; right: 0px; }
                         .cont_info_inicio {
                             .inicio_titulo {
-                                padding-top: 5px 10px 0px 10px;
+                                padding: 5px 10px 0px 10px;
                             }
                             .inicio_subtitulo {
-                                padding-top: 5px 10px 0px 10px;
+                                padding: 5px 10px 0px 10px;
                             }
                             .inicio_div_texto {
                                 padding: 10px;
