--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -693,7 +693,7 @@ body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_inf
   padding: 0px 20px 0px 20px;
 }
 body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_div_texto {
-  overflow-y: scroll;
+  padding: 10px 20px 20px 20px;
 }
 body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_div_texto .inicio_texto {
   padding: 5px 20px 20px 20px;
