--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1175,7 +1175,7 @@ body {
                                 padding: 0px 20px 0px 20px;
                             }
                             .inicio_div_texto {
-                                overflow-y: scroll;
+                                padding: 10px 20px 20px 20px;
                                 .inicio_texto {
                                     padding: 5px 20px 20px 20px;
                                     text-align: justify;
