--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -696,7 +696,7 @@ body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_inf
   padding: 10px 20px 20px 20px;
 }
 body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_div_texto .inicio_texto {
-  padding: 5px 20px 20px 20px;
+  overflow-y: scroll;
   text-align: justify;
 }
 
