--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1166,7 +1166,7 @@ body {
             .cont_modals {
                 .modal_pagina_inicio {
                     .cont_modal {
-                        .close{ top: 0px; right: 0px; }
+                        .close{}
                         .cont_info_inicio {
                             .inicio_titulo {
                                 padding: 15px 20px 0px 20px;
