--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -634,6 +634,9 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 }
 /* MODALS PASO CARTA PENDIENTE */
 /* MODALS PAGINA */
+body .contenedor .modals .cont_modals .modal_pagina {
+  min-height: 250px;
+}
 /* MODALS PAGINA */
 /* MODALS ERROR LOCALES */
 body .contenedor .modals .cont_modals .modal_error_locales .cont_modal .cont_info .info_modal .cont_direccion {
