--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -991,6 +991,7 @@ body {
         .modals{
             .cont_modals {
                 .modal_pagina {
+                    min-height: 250px;
                     .cont_modal {
                         .close{}
                         .cont_info{}
