--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -909,7 +909,7 @@ body {
                 .modal_pagina {
                     .cont_modal {
                         .close{}
-                        .cont_info{}
+                        .cont_info_pagina{}
                     }
                 }
             }
