--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -811,7 +811,7 @@ body {
                 .modal_pagina {
                     .cont_modal {
                         .close{}
-                        .cont_info{}
+                        .cont_info_pagina{}
                     }
                 }
             }
