--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -994,7 +994,7 @@ body {
                     min-height: 250px;
                     .cont_modal {
                         .close{}
-                        .cont_info{}
+                        .cont_info_pagina{}
                     }
                 }
             }
