--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -730,7 +730,7 @@ body {
                 .modal_pagina {
                     .cont_modal {
                         .close{}
-                        .cont_info{}
+                        .cont_info_pagina{}
                     }
                 }
             }
