--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -927,6 +927,7 @@ body {
                                     .categoria {
                                         margin-bottom: 5px;
                                         .cont_fondo {
+                                            position: relative;
                                             .cont_fondoi {
                                                 width: 94%;
                                                 left: 3%;
