--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -36,8 +36,8 @@ body {
                 .menu_info{
                     display: block;
                     h1{}
-                    ul{
-                        li{}
+                    .lista_paginas{
+                        a{}
                     }
                 }
             }
