--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -37,7 +37,7 @@ body {
                     display: block;
                     h1{}
                     .lista_paginas{
-                        a{}
+                        a{ display: block; text-decoration: none; }
                     }
                 }
             }
