--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -859,6 +859,7 @@ body {
                                         }
                                     }
                                     .categoria {
+                                        display: block;
                                         .cont_fondo {
                                             position: relative;
                                             .cont_fondoi {
