--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -157,6 +157,15 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   background: #900;
   color: #fff;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .nombre {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .descripcion {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .precio {
+  color: #000;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen {
   background: #ddd;
 }
