--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -138,7 +138,7 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   color: #fff;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table {
-  background: #eee;
+  background: #ccc;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .foto {
   background: #000;
