--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -611,7 +611,7 @@ $producto_add_carro_color: #fff;
 $producto_add_carro_cont_background: #ddd;
 $producto_cont_background: #ddd;
 
-$producto2_background: #eee;
+$producto2_background: #ccc;
 $producto2_add_carro_background: #900;
 $producto2_add_carro_color: #fff;
 $producto2_add_carro_cont_background: #ddd;
