--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -957,9 +957,7 @@ body {
                                                     .prod_i_nom {
                                                         width: calc(100% - 70px);
                                                         .prod_i_ttl{}
-                                                        .prod_i_sttl {
-                                                            line-height: 12px;
-                                                        }
+                                                        .prod_i_sttl{}
                                                     }
                                                     .prod_i_pre {
                                                         width: 70px;
