--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -491,19 +491,21 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 {
   margin-bottom: 5px;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data {
+  padding: 10px 0px;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .nombre {
   display: block;
-  padding-left: 5px;
+  padding-left: 10px;
   padding-top: 5px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .descripcion {
   display: block;
-  padding-left: 5px;
-  line-height: 12px;
+  padding-left: 10px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .precio {
   display: block;
-  padding-left: 5px;
+  padding-left: 10px;
   padding-bottom: 5px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .foto {
