--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -78,6 +78,16 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
 /* MODALS PASO PROMOCION */
 /* MODALS PASO PROMOCION */
 /* MODALS PASO CARTA */
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .nombre {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .descripcion {
+  font-size: 16px;
+  line-height: 14px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .precio {
+  font-size: 18px;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .nombre {
   font-size: 22px;
 }
