--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -800,19 +800,19 @@ body {
                                             tr {
                                                 td {
                                                     .cont_data {
+                                                        padding: 10px 0px;
                                                         .nombre {
                                                             display: block;
-                                                            padding-left: 5px;
+                                                            padding-left: 10px;
                                                             padding-top: 5px;
                                                         }
                                                         .descripcion {
                                                             display: block;
-                                                            padding-left: 5px;
-                                                            line-height: 12px;
+                                                            padding-left: 10px;
                                                         }
                                                         .precio {
                                                             display: block;
-                                                            padding-left: 5px;
+                                                            padding-left: 10px;
                                                             padding-bottom: 5px;
                                                         }
                                                     }
