--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -78,6 +78,22 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
 /* MODALS PASO PROMOCION */
 /* MODALS PASO PROMOCION */
 /* MODALS PASO CARTA */
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .titulo .cont_titulo h1 {
+  font-size: 12px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .titulo .cont_titulo h2 {
+  font-size: 10px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto .cont_producto .cont_info_pro .nombre {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto .cont_producto .cont_info_pro .descripcion {
+  font-size: 16px;
+  line-height: 14px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto .cont_producto .cont_info_pro .precio {
+  font-size: 18px;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .nombre {
   font-size: 18px;
 }
@@ -87,6 +103,26 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto2 table tr td .cont_data .precio {
   font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .pro_fondo .cont_pr .cont_prod .nombre {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .pro_fondo .cont_pr .cont_prod .descripcion {
+  font-size: 16px;
+  line-height: 14px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .pro_fondo .cont_pr .cont_prod .precio {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .nombre {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .descripcion {
+  font-size: 12px;
+  line-height: 12px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .precio {
+  font-size: 16px;
 }
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoriaopen .cont_fondo .nombre {
   font-size: 22px;
