--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -25,7 +25,7 @@ body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
   background: #F9DDF3;
 }
 body .contenedor .pagina .cont_pagina .header .cart_info {
-  color: #F9DDF3;
+  color: #000;
 }
 body .contenedor .pagina .cont_pagina .contenido {
   background: #e8e8e8;
