--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -28,7 +28,7 @@ $header_color: #fff;
 $header_bottom: #941C80;
 $header_cart_color: #941C80;
 $header_cant_cart_color: #F9DDF3;
-$header_cart_mensaje: #F9DDF3;
+$header_cart_mensaje: #000;
 $contenido_background: #e8e8e8;
 
 $btn_prin_nombre: #000;
